[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/fakeads/banner_amdbs.jpeg" type="Texture2D" id=1]
[ext_resource path="res://assets/fonts/NotoSans-Regular.ttf" type="FontFile" id=2]
[ext_resource path="res://src/fakeads/fake_ads.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/NotoSans-Bold.ttf" type="FontFile" id=4]
[ext_resource path="res://assets/fakeads/texture_progress.png" type="Texture2D" id=5]

[sub_resource type="FontFile" id=1]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="FontFile" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="FontFile" id=8]
size = 32
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="FontFile" id=9]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="FontFile" id=15]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[node name="FakeAds" type="CanvasLayer"]
process_mode = 3
layer = 128
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.9, 0.9, 0.9, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
offset_right = 720.0
offset_bottom = 320.0
custom_minimum_size = Vector2( 720, 320 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.0
offset_top = -288.0
offset_right = 328.0
offset_bottom = 480.0
custom_minimum_size = Vector2( 656, 768 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control/CenterContainer"]
offset_right = 656.0
offset_bottom = 768.0
grow_horizontal = 2
grow_vertical = 2
custom_minimum_size = Vector2( 656, 768 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color( 0, 0, 0, 1 )
theme_override_fonts/bold_font = SubResource( 1 )
theme_override_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UrlButton" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -144.0
offset_top = -80.0
offset_right = -35.0
offset_bottom = -35.0
theme_override_colors/font_disabled_color = Color( 0.258824, 0.521569, 0.956863, 1 )
theme_override_colors/font_color = Color( 0.258824, 0.521569, 0.956863, 1 )
theme_override_colors/font_hover_color = Color( 0.258824, 0.521569, 0.956863, 1 )
theme_override_colors/font_pressed_color = Color( 0.258824, 0.521569, 0.956863, 1 )
theme_override_fonts/font = SubResource( 8 )
theme_override_styles/hover = SubResource( 3 )
theme_override_styles/pressed = SubResource( 4 )
theme_override_styles/focus = SubResource( 5 )
theme_override_styles/disabled = SubResource( 6 )
theme_override_styles/normal = SubResource( 7 )
text = "Open >"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgressBar" type="TextureProgressBar" parent="Control"]
offset_left = 32.0
offset_top = 32.0
offset_right = 96.0
offset_bottom = 96.0
max_value = 15.0
step = 0.01
value = 5.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
fill_mode = 5
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 0.5, 0.5, 0.5, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/TextureProgressBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource( 9 )
text = "0"
align = 1
valign = 1
autowrap = true

[node name="CloseButton" type="Button" parent="Control"]
visible = false
offset_right = 128.0
offset_bottom = 128.0
theme_override_fonts/font = SubResource( 15 )
theme_override_styles/hover = SubResource( 10 )
theme_override_styles/pressed = SubResource( 11 )
theme_override_styles/focus = SubResource( 12 )
theme_override_styles/disabled = SubResource( 13 )
theme_override_styles/normal = SubResource( 14 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Control"]
wait_time = 15.0
one_shot = true

[connection signal="pressed" from="Control/UrlButton" to="." method="_on_UrlButton_pressed"]
[connection signal="pressed" from="Control/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="timeout" from="Control/Timer" to="." method="_on_Timer_timeout"]
